feat: update template settings

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="postbody">
       <div
-        id="template"
+        id="pk-primal-template"
         d-avatar="img/1.jpg"
         d-background="img/background.jpg"
         d-firstname="Tilian"
@@ -26,11 +26,11 @@
         d-faction="Imperio"
         d-starter="Machop"
         d-pack="Pack 1"
-        d-desc1="1"
-        d-desc2="2"
-        d-desc3="3"
-        d-desc4="4"
-        d-desc5="5"
+        d-desc1="..."
+        d-desc2="..."
+        d-desc3="..."
+        d-desc4="..."
+        d-desc5="..."
       />
     </div>
   </body>
